--- a/lib/eventasaurus_web/live/admin/category_hierarchy_live.html.heex
+++ b/lib/eventasaurus_web/live/admin/category_hierarchy_live.html.heex
@@ -35,6 +35,12 @@
       >
         Hierarchy
       </.link>
+      <.link
+        navigate={~p"/admin/categories/insights"}
+        class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm"
+      >
+        Insights
+      </.link>
     </nav>
   </div>
 
